@@ -1,4 +1,5 @@
 Development
+    libgmlib - gm_audio Reduce load when type is not pulse
     Process PulseAudio volume changes from PulseAudio server, to keep gui in sync
     Run make indent on all source files
     Remove idledata->mplayer_volume tracking as not needed anymore (to be replaced with other code)
